3.3.0
  - New API
    - SerializableTransactionRunner.setOnFailure(), setOnSuccess() methods allow callbacks to be
      registered to observe transaction success and failure.
    - JdbiRule.migrateWithFlyway() chaining method to run Flyway migrations on the test database
      prior to running tests.
  - Improvements
    - MessageFormatTemplateEngine is not an enum anymore but a regular singleton
    - added some extra javadoc to SqlLogger
  - Bug fixes
    - SqlStatement.bindMethods() (and @BindMethods) now selects the correct method when the
      method return type is generic.
    - mapToMap() no longer throws an exception on empty resultsets when ResultProducers.allowNoResults is true
  - Breaking changes
    - Removed JdbiRule.createJdbi() in favor of createDataSource(). This was necessary to
      facilitate the migrateWithFlyway() feature above, and pave the way for future additions.
    - Removed SqlLogger.wrap() added in 3.2.0 from public API.

3.2.1
  - Fix IllegalArgumentException "URI is not hierarchical" in FreemarkerSqlLocator.

3.2.0
  - New modules:
    - jdbi3-testing - JdbiRule test rule for JUnit tests
    - jdbi3-freemarker - render SQL templates using FreeMarker
    - jdbi3-commons-text - render SQL templates using Apache commons-text StringSubstitutor
    - jdbi3-sqlite - plugin for use with SQLite database
  - New API
    - @SqlScript annotation to execute multiple statements
    - SqlLogger for logging queries, timing, and exceptions. Replacing TimingCollector, which
      is now deprecated
    - Add ResultProducers.allowNoResults configuration option in case you may or may not get a
      result set
    - MessageFormatTemplateEngine template engine, renders SQL using java.text.MessageFormat
    - SqliteDatabaseRule test rule (in jdbi3-core test jar)
  - Improvements
    - @MaxRows.value() may now be omitted when used as a parameter annotation
    - SerializableTransactionRunner 'max retries' handling throws more meaningful exceptions