@@ -22,11 +22,23 @@ import org.jdbi.v3.core.statement.TemplateEngine;
  * Register an instance of this class ({@link org.jdbi.v3.core.statement.SqlStatements#setTemplateEngine}) to use an Apache Commons Text {@link StringSubstitutor} as a {@link TemplateEngine}. This lets you use any pair of strings as variable delimiters, enabling the use of syntax like <pre>select * from ${foo}</pre>, <pre>select * from &lt;foo&gt;</pre>, <pre>select * from %foo%</pre>, etc.
  */
 public class StringSubstitutorTemplateEngine implements TemplateEngine {
-    public static final TemplateEngine INSTANCE = defaults();
-
     private final Consumer<StringSubstitutor> customizer;
 
-    private StringSubstitutorTemplateEngine(Consumer<StringSubstitutor> customizer) {
+    /**
+     * Default is <pre>${foo}</pre> syntax.
+     */
+    public StringSubstitutorTemplateEngine() {
+        this(substitutor -> {
+            substitutor.setVariablePrefix("${");
+            substitutor.setVariableSuffix("}");
+            substitutor.setEscapeChar('\\');
+        });
+    }
+
+    /**
+     * Customize the given {@link StringSubstitutor} instance to set your preferred prefix, suffix, escape character, and perhaps other configuration. The instance is created by Jdbi, and is not shared nor re-used. Your customizer function however will be re-used for all instances.
+     */
+    public StringSubstitutorTemplateEngine(Consumer<StringSubstitutor> customizer) {
         this.customizer = customizer;
     }
 
@@ -38,15 +50,17 @@ public class StringSubstitutorTemplateEngine implements TemplateEngine {
     }
 
     /**
-     * At the time of writing, defaults means <pre>${foo}</pre> syntax.
+     * @deprecated use the default constructor instead
      */
+    @Deprecated
     public static StringSubstitutorTemplateEngine defaults() {
-        return new StringSubstitutorTemplateEngine(substitutor -> {});
+        return new StringSubstitutorTemplateEngine();
     }
 
     /**
-     * Customize the given {@link StringSubstitutor} instance to set your preferred prefix, suffix, escape character, and perhaps other configuration. The instance is created by Jdbi, and is not shared nor re-used. Your customizer function however will be re-used for all instances.
+     * @deprecated use the constructor instead
      */
+    @Deprecated
     public static StringSubstitutorTemplateEngine withCustomizer(Consumer<StringSubstitutor> customizer) {
         return new StringSubstitutorTemplateEngine(customizer);
     }
