@@ -14,56 +14,52 @@
 package org.jdbi.v3.sqlobject.config.internal;
 
 import java.lang.annotation.Annotation;
-import java.lang.reflect.Constructor;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-
+import java.util.Arrays;
+import java.util.Objects;
+import java.util.function.Supplier;
+import java.util.stream.Stream;
+import javax.annotation.Nullable;
 import org.jdbi.v3.core.config.ConfigRegistry;
-import org.jdbi.v3.core.statement.TemplateEngine;
 import org.jdbi.v3.core.statement.SqlStatements;
+import org.jdbi.v3.core.statement.TemplateEngine;
 import org.jdbi.v3.sqlobject.config.Configurer;
 import org.jdbi.v3.sqlobject.config.UseTemplateEngine;
 
 public class UseTemplateEngineImpl implements Configurer {
     @Override
-    public void configureForMethod(ConfigRegistry registry, Annotation annotation, Class<?> sqlObjectType, Method method) {
+    public void configureForMethod(ConfigRegistry registry, Annotation annotation, Class<?> sqlObjectType, @Nullable Method method) {
         UseTemplateEngine anno = (UseTemplateEngine) annotation;
-        try {
-            final TemplateEngine templateEngine = instantiate(anno.value(), sqlObjectType, method);
-            registry.get(SqlStatements.class).setTemplateEngine(templateEngine);
-        } catch (Exception e) {
-            throw new IllegalStateException(e);
-        }
+        TemplateEngine templateEngine = instantiate(anno.value(), sqlObjectType, method);
+        registry.get(SqlStatements.class).setTemplateEngine(templateEngine);
     }
 
     @Override
     public void configureForType(ConfigRegistry registry, Annotation annotation, Class<?> sqlObjectType) {
-        UseTemplateEngine anno = (UseTemplateEngine) annotation;
-        try {
-            final TemplateEngine templateEngine = instantiate(anno.value(), sqlObjectType, null);
-            registry.get(SqlStatements.class).setTemplateEngine(templateEngine);
-        } catch (Exception e) {
-            throw new IllegalStateException(e);
-        }
+        configureForMethod(registry, annotation, sqlObjectType, null);
     }
 
-    private TemplateEngine instantiate(Class<? extends TemplateEngine> value,
-                                       Class<?> sqlObjectType,
-                                       Method m) throws Exception {
-        try {
-            Constructor<? extends TemplateEngine> noArg = value.getConstructor();
-            return noArg.newInstance();
-        } catch (NoSuchMethodException e) {
+    private static TemplateEngine instantiate(Class<? extends TemplateEngine> engineClass, Class<?> sqlObjectType, @Nullable Method method) {
+        return Stream.of(tryConstructor(engineClass), tryConstructor(engineClass, sqlObjectType), tryConstructor(engineClass, sqlObjectType, method))
+            .map(Supplier::get)
+            .filter(Objects::nonNull)
+            .findFirst()
+            .orElseThrow(() -> new IllegalStateException("Unable to instantiate, no viable constructor for " + engineClass.getName()));
+    }
+
+    private static <T extends TemplateEngine> Supplier<T> tryConstructor(Class<T> c, Object... args) {
+        Object[] nonNullArgs = Arrays.stream(args).filter(Objects::nonNull).toArray(Object[]::new);
+
+        return () -> {
             try {
-                Constructor<? extends TemplateEngine> classArg = value.getConstructor(Class.class);
-                return classArg.newInstance(sqlObjectType);
-            } catch (NoSuchMethodException e1) {
-                if (m != null) {
-                    Constructor<? extends TemplateEngine> constructor = value.getConstructor(Class.class,
-                                                                                            Method.class);
-                    return constructor.newInstance(sqlObjectType, m);
-                }
-                throw new IllegalStateException("Unable to instantiate, no viable constructor " + value.getName());
+                Class[] classes = Arrays.stream(nonNullArgs).map(Object::getClass).toArray(Class[]::new);
+                return c.getConstructor(classes).newInstance(nonNullArgs);
+            } catch (NoSuchMethodException ignored) {
+                return null;
+            } catch (IllegalAccessException | InstantiationException | InvocationTargetException e) {
+                throw new RuntimeException(e);
             }
-        }
+        };
     }
 }
