@@ -4,6 +4,7 @@
       registered to observe transaction success and failure.
     - JdbiRule.migrateWithFlyway() chaining method to run Flyway migrations on the test database
       prior to running tests.
+    - added @UseStringSubstitutorTemplateEngine for custom configuration. @UseTemplateEngine(StringSubstitutorTemplateEngine.class) is also supported.
   - Improvements
     - MessageFormatTemplateEngine is not an enum anymore but a regular singleton
     - added some extra javadoc to SqlLogger
@@ -11,10 +12,14 @@
     - SqlStatement.bindMethods() (and @BindMethods) now selects the correct method when the
       method return type is generic.
     - mapToMap() no longer throws an exception on empty resultsets when ResultProducers.allowNoResults is true
+    - @UseTemplateEngine works with MessageFormatTemplateEngine and StringSubstitutorTemplateEngine now
   - Breaking changes
     - Removed JdbiRule.createJdbi() in favor of createDataSource(). This was necessary to
       facilitate the migrateWithFlyway() feature above, and pave the way for future additions.
     - Removed SqlLogger.wrap() added in 3.2.0 from public API.
+  - Deprecations
+    - deprecated MessageFormatTemplateEngine.INSTANCE in favor of a default constructor
+    - deprecated StringSubstitutorTemplateEngine.INSTANCE, -.defaults, and -.withCustomizer in favor of public constructors
 
 3.2.1
   - Fix IllegalArgumentException "URI is not hierarchical" in FreemarkerSqlLocator.
